[package]
name = "anthropic-client"
version = "0.1.0"
edition = "2024"
publish = true

[dependencies]
bytes = "1.10.1"
futures-core = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.22", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
tokio.workspace = true
