[package]
name = "kepo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-sdk-bedrockruntime.workspace = true
clap = { version = "4.5.41", features = ["derive"] }
kepoki = { path = "../kepoki" }
kepoki-bedrock = { path = "../kepoki-bedrock" }
kepoki-mcp = { path = "../kepoki-mcp" }
regex = "1.11.1"
rmcp.workspace = true
serde_json = "1.0.141"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.19"
