[package]
name = "kepoki-anthropic"
description = "Anthropic adapter for Kepoki, a Rust library for building AI applications."
authors = ["Chay Nabors (chaynabors@gmail.com)"]
version = "0.2.1"
edition = "2024"
publish = true
license = "MIT OR Apache-2.0"

[dependencies]
anthropoki = { version = "0.3.0", path = "../anthropoki" }
futures = { version = "0.3.31", features = ["executor"] }
kepoki = { version = "0.2.0", path = "../kepoki" }
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tracing-subscriber = { version = "0.3.19" }
