[package]
name = "kepoki"
version = "0.1.0"
edition = "2024"

[dependencies]
regress = "0.10.4"
rmcp.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1.17.0", features = ["v4", "serde"] }
